--- a/Main/index.html
+++ b/Main/index.html
@@ -11,14 +11,15 @@
 <body>
     <NAV>
         <div class="logo">
-            <a href="#"><h3>GeoTraveler</h3></a>
+            <a href="index.html"><h3>GeoTraveler</h3></a>
         </div>
         <ul class="nav-links">
-            <li><a href="#"> Main </a></li>
+            <li><a href="index.html"> Main </a></li>
             <li><a href="#"> Destination </a></li>
             <li><a href="#"> Plan Your Trip </a></li>
             <li><a href="#"> About Georgia </a></li>
             <li><a href="#"> Contact Us </a></li>
+            <li><a class ='login' href="#"> Login</a></li> <!--მინდა რომ კომპზე არ გამოჩნდეს ნავიგაციაში და მობილურზე ბურგერ მენიუში გამოჩნდეს-->
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -26,18 +27,82 @@
             <div class="line3"></div>
         </div>
     </NAV>
-    <script src="js/app.js"></script>
+    <!-- ბურგერ მენიუს სკრიპტი -->
+    <script src="js/burger.js"></script>
     <div class="containter">
         <div class="banner">
-            <img class="banner-image" src="images/caucasus.jpg">
+                
         </div>
         <div class="title">
             <h1>EXPLORE GEORGIA</h1>
         </div>
-        <div class="button">
+        <!--  <div class="button">
             <a href="#" class="btn">LOG IN</a>
             <a href="#" class="btn">REGISTER</a>
-        </div>
+        </div> -->
     </div>
+    <div class="select-container">
+        <h1>Plan Your Trip</h1>
+        <!-- <h2>Where To Go</h2> -->
+        <div class="select-box">
+            <h2>Where To Go</h2>
+            <div class="options-container">
+                <div class="option">
+                    <input type="radio" class="radio" id="Tbilisi" name="Category" value="Tbilisi">
+                    <label for="Tbilisi">Tbilisi</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Kutaisi" name="Category" value="Kutaisi">
+                    <label for="Kutaisi">Kutaisi</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Batumi" name="Category" value="Batumi">
+                    <label for="Batumi">Batumi</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Mcxeta" name="Category" value="Mcxeta">
+                    <label for="Mcxeta">Mcxeta</label>
+                </div>
+            </div>
+            <div class="selected">
+                Select where to go
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Type City...">
+            </div>
+        </div>
+        <!-- <h2>What To Do</h2> -->
+        <div class="select-box">
+            <h2>What To Do</h2>
+            <div class="options-container">
+                <div class="option">
+                    <input type="radio" class="radio" id="Swim" name="Category" value="Swim">
+                    <label for="Swim">Swimming</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Hike" name="Category" value="Hike">
+                    <label for="Hike">Hiking</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Camp" name="Category" value="Camp">
+                    <label for="Camp">Camping</label>
+                </div>
+                <div class="option">
+                    <input type="radio" class="radio" id="Climb" name="Category" value="Climb">
+                    <label for="Climb">Climbing</label>
+                </div>
+                
+            </div>
+            <div class="selected">
+                Select what to do
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Type Activity...">
+            </div>
+        </div>
+        <input type="submit" value="Upload" class="Select-Button">
+    </div>
+    <!-- select-ის სკრიპტი -->
+    <script src="js/select.js"></script> 
 </body>
 </html>
