--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html"> Main </a></li>
-            <li><a href="#"> Destination </a></li>
+            <li><a href="#"> Destination 1 </a></li>
             <li><a href="#"> Plan Your Trip </a></li>
             <li><a href="#"> About Georgia </a></li>
             <li><a href="#"> Contact Us </a></li>
