--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html"> Main </a></li>
-            <li><a href="#"> Destination 1 </a></li>
+            <li><a href="#"> Destination  </a></li>
             <li><a href="#"> Plan Your Trip </a></li>
             <li><a href="#"> About Georgia </a></li>
             <li><a href="#"> Contact Us </a></li>
@@ -103,6 +103,44 @@
         <input type="submit" value="Upload" class="Select-Button">
     </div>
     <!-- select-ის სკრიპტი -->
-    <script src="js/select.js"></script> 
+    <script src="js/select.js"></script> </div>
+
+    <div class="text">
+        <h3>IN THE SPOTLIGHT</h3>
+        
+    </div>
+   
+    <div class="container p-3">
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div class="card mb-3">
+                <div class="card-img" style="background-image:url('images/skiing.jpg')"></div>    
+                <div class="card-img-overlay d-flex flex-column justify-content-between">
+                    <h4 class="card-title">Skiing resorts</h4>
+                    <p class="card-text oswald">Read more</p>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 mb-3">
+                <div class="card">
+                <div class="card-img" style="background-image:url('images/seaside.jpg')"></div>    
+                <div class="card-img-overlay d-flex flex-column justify-content-between">
+                    <h4 class="card-title">Seaside</h4>
+                    <p class="card-text oswald">Read more</p>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 mb-3">
+                <div class="card">
+                <div class="card-img" style="background-image:url('images/wine.jpg')"></div>    
+                <div class="card-img-overlay d-flex flex-column justify-content-between">
+                    <h4 class="card-title">Georgian vineyard</h4>
+                    <p class="card-text oswald">Read more </p>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
