--- a/Main/AboutGeorgia.html
+++ b/Main/AboutGeorgia.html
@@ -117,7 +117,7 @@
         <div class="RegionsHeader">
             <h1>Regions Of Georgia</h1>
         </div>
-        <a href="">
+        <a href="AboutGeorgiaRegions.html">
             <div class="map">
             </div>
         </a>
@@ -134,7 +134,7 @@
                 <div class="NatureText">
                     <h3>Mountains</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <button>READ MORE</button>
+                    <a href="AboutGeorgiaNatureMountains.html"><button>READ MORE</button></a>
                 </div>
             </article>
             <article>
@@ -150,7 +150,7 @@
                 <div class="NatureText">
                     <h3>Animals</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <button>READ MORE</button>
+                    <a href=""><button>READ MORE</button></a>
                 </div>
             </article>
         </main>
